# ray_tracing

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  todo.md
.devcontainer/: Dockerfile  devcontainer.json
Ray-Tracing/: Ray-Tracing.sln
Ray-Tracing/Ray-Tracing/: Camera.h  Colour.h  Config.h  Cube.h  Material.h  ObjLoader.h  Object.h  Objloader.cpp  Polygon.cpp  Polygon.h  Ray-Tracing.cpp  Ray-Tracing.vcxproj  Ray-Tracing.vcxproj.filters  Ray.h  Render_Output.ppm  Scene.cpp  Scene.h  Sphere.h  Triangle.cpp  Triangle.h  Utils.h  Vec3.cpp  Vec3.h  Vector2.h  Vector3.h  Virtex.h  camera.h  config.cpp  config.h  main.cpp  object.h  output.ppm  (+10 more)
apps/: CMakeLists.txt  ray_tracer.cpp  thread_test.cpp
renders/: 1647638976.ppm
source/: config.cpp  config.h  line.h  main.cpp  object.h  parallelepiped.h  parallelogram.h  polygon.h  sphere.h  triangle.h  utils.h  vector.h
src/: CMakeLists.txt  config.cpp  config.h  config.hpp  logging.h  main.cpp  parallelogram.cpp  polygon.h
src/objects/: CMakeLists.txt  complex_polygon.cpp  complex_polygon.hpp  object.h  object.hpp  parallelepiped.cpp  parallelepiped.h  parallelepiped.hpp  parallelogram.cpp  parallelogram.hpp  polygon.cpp  polygon.hpp  scene.cpp  scene.hpp  sphere.cpp  sphere.h  sphere.hpp  triangle.cpp  triangle.hpp
src/objects/fundamental/: fundamental_object.cpp  fundamental_object.hpp  parallelogram.cpp  parallelogram.hpp  sphere.cpp  sphere.hpp  triangle.cpp  triangle.hpp
src/rendering/: CMakeLists.txt  camera.h  camera.hpp  render.cpp  render.hpp  renderer.cpp  renderer.h  renderer.hpp
(+65 files in other folders)
